部署文件修改